// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`size when custom config is provided when the custom config overrides a value should replace the default value 1`] = `
Object {
  "height": Object {
    "large": Object {
      "height": "6rem",
    },
    "medium": Object {
      "height": "3rem",
    },
    "small": Object {
      "height": "10rem",
    },
  },
  "width": Object {
    "fifth": Object {
      "width": "20%",
    },
    "full": Object {
      "width": "100%",
    },
    "half": Object {
      "width": "50%",
    },
    "quarter": Object {
      "width": "25%",
    },
    "sixth": Object {
      "width": "16.6666666667%",
    },
    "third": Object {
      "width": "33.3333333333%",
    },
    "view": Object {
      "width": "100vw",
    },
  },
}
`;

exports[`size when custom config is provided when the custom config provides a new value should add the value 1`] = `
Object {
  "height": Object {
    "large": Object {
      "height": "6rem",
    },
    "medium": Object {
      "height": "3rem",
    },
    "small": Object {
      "height": "1rem",
    },
  },
  "width": Object {
    "fifth": Object {
      "width": "20%",
    },
    "full": Object {
      "width": "100%",
    },
    "half": Object {
      "width": "50%",
    },
    "quarter": Object {
      "width": "25%",
    },
    "sixth": Object {
      "width": "16.6666666667%",
    },
    "tenth": Object {
      "width": "10%",
    },
    "third": Object {
      "width": "33.3333333333%",
    },
    "view": Object {
      "width": "100vw",
    },
  },
}
`;

exports[`size when no custom config is provided should return the default config 1`] = `
Object {
  "height": Object {
    "large": Object {
      "height": "6rem",
    },
    "medium": Object {
      "height": "3rem",
    },
    "small": Object {
      "height": "1rem",
    },
  },
  "width": Object {
    "fifth": Object {
      "width": "20%",
    },
    "full": Object {
      "width": "100%",
    },
    "half": Object {
      "width": "50%",
    },
    "quarter": Object {
      "width": "25%",
    },
    "sixth": Object {
      "width": "16.6666666667%",
    },
    "third": Object {
      "width": "33.3333333333%",
    },
    "view": Object {
      "width": "100vw",
    },
  },
}
`;
